fixing contact page mobile spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -553,6 +553,8 @@ html {
   padding: var(--size-600);
   background-color: var(--clr-neutral-100);
   border-radius: var(--border-radius-400);
+  width: 100%;
+  max-width: 600px;
   margin-top: var(--size-800);
 }
 
